Fix hr positioning for any media
Mobile needs it moved higher than desktop, so use media queries to fix
that.

Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/style.css
+++ b/style.css
@@ -81,6 +81,15 @@ img.sign {
     #ournames {
         font-size: 2em;
     }
+    hr::after {
+        top: -30px;
+    }
+}
+
+@media (min-width:1000px) {
+    hr::after {
+        top: -13px;
+    }
 }
 
 #initials {
@@ -97,10 +106,8 @@ hr {
 }
 hr::after {
     content: '♥️ ♥️ ♥️';
-    position: relative;
     padding: 0 4px;
     position: relative;
-    top: -13px;
     color: transparent;
     text-shadow: 0 0 0 #582848;
 }
