--- a/style.css
+++ b/style.css
@@ -80,6 +80,12 @@ img.sign {
 }
 
 @media (min-width:1000px) {
+    h3,h4 {
+        font-size: 3em;
+    }
+    #ournames {
+        font-size: 3em;
+    }
     hr::after {
         top: -13px;
     }
