Stack our names vertically on mobile
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ img.sign {
     }
     #ournames {
         font-size: 2em;
+        word-spacing: 100vw;
     }
     hr::after {
         top: -30px;
